...
                            <menuItem title="Paste and Match Style" keyEquivalent="V" id="470">
                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                <connections>
                                    <action selector="pasteAsPlainText:" target="-1" id="471"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Delete" id="202">
                                <connections>
                                    <action selector="delete:" target="-1" id="235"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Select All" keyEquivalent="a" id="198">
                                <connections>
...
                                    <action selector="mergeBranch:" target="-1" id="4Hs-dZ-gmB"/>
                                </connections>
                            </menuItem>
                        </items>
                    </menu>
                </menuItem>
                <menuItem title="View" id="295">
                    <menu key="submenu" title="View" id="296">
                        <items>
                            <menuItem title="Show Sidebar" secondaryImage="inset.filled.leftthird.rectangle" catalog="system" id="LeS-23-fp1">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="showHideSidebar:" target="-1" id="a3N-YJ-Rba"/>
...
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="horizontalLayout:" target="-1" id="poR-4f-dLo"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="OWv-Fq-1dD"/>
                            <menuItem title="Show Tab Bar" id="Yq8-1k-Jqn">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="toggleTabBar:" target="-1" id="oOG-7a-dqd"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Enter Full Screen" keyEquivalent="f" id="LLt-Sq-vM7">
...
